# habeeb-backend-test

./: .gitignore  README.md  db.sqlite3  dump.rdb  pyproject.toml  requirements.txt
.ebextensions/: django.config
common/: exceptions.py  helper.py  kgs.py  models.py  serializers.py  validator.py
core/: celery.py  settings.py  urls.py
user/: enums.py  managers.py  models.py  permissions.py  tasks.py  utils.py
user/management/commands/: app_setup.py
user/migrations/: 0001_initial.py  0002_alter_user_department.py  0003_alter_user_matric_no.py  0004_alter_user_department.py
user/templates/emails/: admin_notification_mail.html  admin_notification_mail.txt
user/v1/: serializers.py  urls.py  views.py
users/bulk/: Untitled_spreadsheet_-_Sheet1.csv  batch_upload_error_filexszmox9onlgyv8nb2isddv0k.csv  ww22_-_Sheet1.csv
